2006-04-28  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Handle GPG secret key import errors.

2006-04-27  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Set a default for $GPG for when sanity.config.sh cannot be
	found.

	* sanity.sh: Some versions of GPG don't like --allow-secret-key-import
	option.  Deal with that.  Comment thoroughly.
	(Report from Larry Jones <lawrence.jones@ugs.com>.)

2006-04-26  Derek Price  <derek@ximbiot.com>
	    Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh: Use --no-secmem-warning to suppress GPG warnings.

2006-04-25  Derek Price  <derek@ximbiot.com>

	* import.c (add_rcs_file): Don't trace NULL strings directly for
	Solaris.
	* cvs.h: Move GNU function attribute protection to <config.h>.
	* sanity.sh: Test for inablility to suppress GPG warnings which cause
	tests to fail.  Supress warnings for bases.
	* rcs.c (RCS_delete_openpgp_signatures): Avoid double-free.  Add
	comments.  Clarify traces.
	(Reports from Mark D. Baushke <mdb@gnu.org>.)

2006-04-24  Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh ($bases): Do not assume 'export VAR=value'
	works for all Bourne Shells -- Solaris does not.

2006-04-13  Derek Price  <derek@ximbiot.com>

	* diff.c (diff_fileproc): Correct for Version_TS error when calling
	make_file_label.

2006-04-12  Derek Price  <derek@ximbiot.com>

	* lock.c: #include "repos.h" for proto.

2006-03-24  Derek Price  <derek@ximbiot.com>

	* verify.c: #include <getopt.h>.
	(verify_usage): Correct usage.
	(verify): Use declared int type for getopt return - char may be
	unsigned on some systems.

2006-03-13  Derek Price  <derek@ximbiot.com>

	Handle OpenPGP version 4 signatures.
	* gpg.c (struct openpgp_signature_subpacket): New struct.
	(parse_signature_subpacket): New function.
	(parse_signature): Process version 4 signatures.

2006-01-27  Derek Price  <derek@ximbiot.com>

	* verify.c: #include "wait.h" from GNULIB.

2006-01-26  Derek Price  <derek@ximbiot.com>

	* verify.c: s/VERIFY_NEVER/VERIFY_OFF/.
